Add rabbitmq and software install\nPending automatic installation and bd check

--- a/AzureWorkspacesDeployment/Artifacts/wsfront/WSMISettings.json
+++ b/AzureWorkspacesDeployment/Artifacts/wsfront/WSMISettings.json
@@ -30,10 +30,10 @@
 		"ADDistinguishedName": "DC=ws,DC=local",
 		"ADPort": "389",
 		"ADSSL": false,
-		"RabbitMQHostName": "WSFront.ws.local",
+		"RabbitMQHostName": "10.0.0.200",
 		"RabbitMQHostPort": "5672",
-		"RabbitMQUser": "guest",
-		"RabbitMQPassword": "guest",
+		"RabbitMQUser": "portal",
+		"RabbitMQPassword": "workspace2017!",
 		"RabbitMQQueueName": "Workspace",
 		"CertificatesSource": 0,
 		"IdentityProviderType": 0,
