--- a/AzureWorkspacesDeployment/Artifacts/wsback/WSMISettings.json
+++ b/AzureWorkspacesDeployment/Artifacts/wsback/WSMISettings.json
@@ -1,1 +1,234 @@
-{"UserParams":{"CertificateInstallationSuccessfull":false,"RegisterWSLResultImageSuccessfull":false,"SilentMode":false,"UninstallMode":false,"GenerateInputFileOnly":false,"InstallerPath":"C:\\Install","InstallDir":"C:\\Program Files\\ASG Workspaces\\","InstallMode":[1],"LicenseAccept":true,"MongoServerHostName":"WSBack.ws.local","MongoConnectionString":"WSBack.ws.local:27017","MongoServerHostPort":"27017","MongoUserName":null,"MongoPassword":null,"MongoDatabaseName":null,"MongoDBNewOrExistingChoice":0,"SQLServerHostName":"sql.ws.local","SQLServerUserName":"wsadmin","SQLServerPassword":"workspace2016!","SQLServerDatabaseName":null,"SQLServerUserIntegratedAuthentication":1,"DBNewOrExistingChoice":0,"ADDomainControler":"DC-01.ws.local","DomainName":"DC=ws,DC=local","ADUserName":"wsadmin","ADPassword":"workspace2016!","ADOrganizationEntity":null,"ADDistinguishedName":"DC=ws,DC=local","ADPort":"389","ADSSL":false,"RabbitMQHostName":"WSFront.ws.local","RabbitMQHostPort":"5672","RabbitMQUser":"guest","RabbitMQPassword":"guest","RabbitMQQueueName":"Workspace","CertificatesSource":0,"IdentityProviderType":0,"CockpitLoginUrl":null,"CockpitLogoutUrl":null,"CockpitPublCertIDP":null,"CockpitURL":"http://WSBack.ws.local/AuthServices","CockpitAutoSSO":false,"ServiceProviderCertificateThumbprint":null,"ServiceProviderCertificate":null,"IdentityProviderCertificateThumbprint":null,"QE_WCF_PublicPort":"8081","QE_WCF_PublicHost":"WSFront.ws.local","QE_REST_PublicHost":"*","QE_REST_PublicPort":"8880","QE_REST_PublicUrl":"WSBack.ws.local:8880","QE_HTTP_HostListen":"WSBack.ws.local","QE_WCF_HostListen":"WSBack.ws.local","QEAgentPort":"8082","QEAgentHost":"WSBack.ws.local","QEAgentSecurCertFindValue":null,"QEAgentSecurContrSubjectName":null,"QEAgentSecurUseSecurity":false,"QEAgentSecurUseUnsafe":false,"REC_PublicPort":"8090","REC_PublicHost":"WSBack.ws.local","REA_CloudRobotInstanceId":"CloudRobot-001","REA_ControllerServerHost":null,"REA_ControllerServerPort":"8090","BA_BusServer":"WSBack.ws.local","BA_TargetInstanceId":"CloudRobot-001","BA_RemoteControlBaseAddr":"http://*:9100","IDB_DatabaseName":"CloudRobotWorkflowInstanceStore","IDB_InstanceStoreUser":"CloudRobotInstanceStoreAdmin","IDB_InstanceStoreUserPassword":"workspace2016!","InstancingDatabaseMode":0,"SCH_ServiceAddress":"WSBack.ws.local","SCH_DBName":"AsgScheduler","SCH_DBUserName":"SchedulerAdmin","SCH_DBUserPassword":"workspace2016!","SCH_DatabaseMode":0,"WE_Server":"WSBack.ws.local","ApprovalServer":"WSBack.ws.local","SchedulerServer":"WSBack.ws.local","WE_User":null,"WE_UserPassword":null,"WE_EnableInstancing":true,"WE_UseLdapViaSsl":false,"TD_DBServer":"WSBack.ws.local","TD_DataBase":"CloudRobotWorkflowTrackingStore","TD_DBUser":"CloudRobotTrackingStoreAdmin","TD_DBUserPassword":null,"TD_TrackingMode":0,"TrackingDatabaseMode":0,"NotificationServer":"WSBack.ws.local","NotifyMailAddress":null,"RepBaseProviderName":null,"RepBaseEnterpriseMode":true,"RepBaseSupportMailAddress":null,"RepBaseEntryOU":null,"RepBaseHomeDirShare":null,"RepBaseHomeDriveLetter":"C:\\","RepBaseTsProfileShare":null,"RepositoryDBName":"RepositoryDB","RepositoryDBUser":"Robot","RepositoryDBPassword":"workspace2016!","IISVD_WebSite":"Default Web Site","IISVD_VDir":"Workspace","SMTPConfig_Host":null,"SMTPConfig_Port":null,"SMTPConfig_UserName":null,"SMTPConfig_Password":null,"SMTPConfig_DefUserAccountSender":null,"SMTPConfig_DefDomainAccountSender":null,"SMTPConfig_EnabledSSL":false,"SMTPConfig_DefCredentials":false,"IDP_StoreURLBase":"http://WSBack.ws.local/Workspace","IDP_LoginUrl":"http://WSBack.ws.local/Workspace/LoginIdp/SSO","IDP_LogoutUrl":"http://WSBack.ws.local/Workspace/SSOLogoutIdp","IDP_Certificate":"~/ExtCertificates/servman.idp.cer ","IDP_UseUPN":false,"RootCred_RootUserDN":null,"RootCred_RootGroupDN":null,"AddConfig_QEUrl":null,"AddConfig_NotifServUrl":null,"AddConfig_EncryptConfig":true,"AddConfig_RabbitScaleOutEnabled":false,"AddConfig_EnableOfferPurchMode":true,"AddConfig_CatalogByDevice":false,"AddConfig_DelUsersFromAD":false,"SCH_REST_PublicHost":"*","SCH_REST_PublicPort":"5000","CS_FilterByUA":null,"Error":null,"WorkspaceDBAdminUser":"WSAdmin","WorkspaceDBAdminPassword":null,"WorkspaceDBUser":"WSUser","WorkspaceDBPassword":null,"WorkspaceDBName":"Workspace","FarmName":"WorkspaceFarm","WebName":"workspace","ConsoleDBName":"WorkspaceConsole","ConsoleDBUser":"ConsoleUser","ConsoleDBPassword":null,"StorefrontHtml5ClientVirtualDir":"HTML5Client","DefaultPublicUrl":"http://WSBack.ws.local/Workspace","WorkflowEngineHost":"WSBack.ws.local","RepositoryServer":"WSBack.ws.local"},"SelectedOptions":[{"Key":"BUS Adapter","Value":true},{"Key":"Instancing Database","Value":true},{"Key":"Query Engine Controller","Value":false},{"Key":"Query Engine Agent","Value":true},{"Key":"Repository Database Creation","Value":true},{"Key":"Repository Base","Value":true},{"Key":"Repository API","Value":true},{"Key":"Routing Engine Agent","Value":false},{"Key":"Routing Engine Controller","Value":false},{"Key":"Scheduler","Value":true},{"Key":"Studio","Value":true},{"Key":"Tracking Database","Value":false},{"Key":"Workflow Analyzer","Value":false},{"Key":"Workflow Analyzer Website","Value":false},{"Key":"Workflow Engine Core","Value":true},{"Key":"Activities","Value":true},{"Key":"Database","Value":false},{"Key":"Portal","Value":false},{"Key":"ASG CloudRobot Encryption","Value":false},{"Key":"Admin Console","Value":false},{"Key":"Admin Console Database","Value":false},{"Key":"Copy Storefront Files","Value":false}]}
+{
+  "UserParams": {
+    "CertificateInstallationSuccessfull": false,
+    "RegisterWSLResultImageSuccessfull": false,
+    "SilentMode": false,
+    "UninstallMode": false,
+    "GenerateInputFileOnly": false,
+    "InstallerPath": "C:\\Install",
+    "InstallDir": "C:\\Program Files\\ASG Workspaces\\",
+    "InstallMode": [ 1 ],
+    "LicenseAccept": true,
+    "MongoServerHostName": "WSBack.ws.local",
+    "MongoConnectionString": "WSBack.ws.local:27017",
+    "MongoServerHostPort": "27017",
+    "MongoUserName": null,
+    "MongoPassword": null,
+    "MongoDatabaseName": null,
+    "MongoDBNewOrExistingChoice": 0,
+    "SQLServerHostName": "sql.ws.local",
+    "SQLServerUserName": "wsadmin",
+    "SQLServerPassword": "workspace2016!",
+    "SQLServerDatabaseName": null,
+    "SQLServerUserIntegratedAuthentication": 1,
+    "DBNewOrExistingChoice": 0,
+    "ADDomainControler": "DC-01.ws.local",
+    "DomainName": "DC=ws,DC=local",
+    "ADUserName": "wsadmin",
+    "ADPassword": "workspace2016!",
+    "ADOrganizationEntity": null,
+    "ADDistinguishedName": "DC=ws,DC=local",
+    "ADPort": "389",
+    "ADSSL": false,
+    "RabbitMQHostName": "10.0.0.200",
+    "RabbitMQHostPort": "5672",
+    "RabbitMQUser": "portal",
+    "RabbitMQPassword": "workspace2017!",
+    "RabbitMQQueueName": "Workspace",
+    "CertificatesSource": 0,
+    "IdentityProviderType": 0,
+    "CockpitLoginUrl": null,
+    "CockpitLogoutUrl": null,
+    "CockpitPublCertIDP": null,
+    "CockpitURL": "http://WSBack.ws.local/AuthServices",
+    "CockpitAutoSSO": false,
+    "ServiceProviderCertificateThumbprint": null,
+    "ServiceProviderCertificate": null,
+    "IdentityProviderCertificateThumbprint": null,
+    "QE_WCF_PublicPort": "8081",
+    "QE_WCF_PublicHost": "WSFront.ws.local",
+    "QE_REST_PublicHost": "*",
+    "QE_REST_PublicPort": "8880",
+    "QE_REST_PublicUrl": "WSBack.ws.local:8880",
+    "QE_HTTP_HostListen": "WSBack.ws.local",
+    "QE_WCF_HostListen": "WSBack.ws.local",
+    "QEAgentPort": "8082",
+    "QEAgentHost": "WSBack.ws.local",
+    "QEAgentSecurCertFindValue": null,
+    "QEAgentSecurContrSubjectName": null,
+    "QEAgentSecurUseSecurity": false,
+    "QEAgentSecurUseUnsafe": false,
+    "REC_PublicPort": "8090",
+    "REC_PublicHost": "WSBack.ws.local",
+    "REA_CloudRobotInstanceId": "CloudRobot-001",
+    "REA_ControllerServerHost": null,
+    "REA_ControllerServerPort": "8090",
+    "BA_BusServer": "WSBack.ws.local",
+    "BA_TargetInstanceId": "CloudRobot-001",
+    "BA_RemoteControlBaseAddr": "http://*:9100",
+    "IDB_DatabaseName": "CloudRobotWorkflowInstanceStore",
+    "IDB_InstanceStoreUser": "CloudRobotInstanceStoreAdmin",
+    "IDB_InstanceStoreUserPassword": "workspace2016!",
+    "InstancingDatabaseMode": 0,
+    "SCH_ServiceAddress": "WSBack.ws.local",
+    "SCH_DBName": "AsgScheduler",
+    "SCH_DBUserName": "SchedulerAdmin",
+    "SCH_DBUserPassword": "workspace2016!",
+    "SCH_DatabaseMode": 0,
+    "WE_Server": "WSBack.ws.local",
+    "ApprovalServer": "WSBack.ws.local",
+    "SchedulerServer": "WSBack.ws.local",
+    "WE_User": null,
+    "WE_UserPassword": null,
+    "WE_EnableInstancing": true,
+    "WE_UseLdapViaSsl": false,
+    "TD_DBServer": "WSBack.ws.local",
+    "TD_DataBase": "CloudRobotWorkflowTrackingStore",
+    "TD_DBUser": "CloudRobotTrackingStoreAdmin",
+    "TD_DBUserPassword": null,
+    "TD_TrackingMode": 0,
+    "TrackingDatabaseMode": 0,
+    "NotificationServer": "WSBack.ws.local",
+    "NotifyMailAddress": null,
+    "RepBaseProviderName": null,
+    "RepBaseEnterpriseMode": true,
+    "RepBaseSupportMailAddress": null,
+    "RepBaseEntryOU": null,
+    "RepBaseHomeDirShare": null,
+    "RepBaseHomeDriveLetter": "C:\\",
+    "RepBaseTsProfileShare": null,
+    "RepositoryDBName": "RepositoryDB",
+    "RepositoryDBUser": "Robot",
+    "RepositoryDBPassword": "workspace2016!",
+    "IISVD_WebSite": "Default Web Site",
+    "IISVD_VDir": "Workspace",
+    "SMTPConfig_Host": null,
+    "SMTPConfig_Port": null,
+    "SMTPConfig_UserName": null,
+    "SMTPConfig_Password": null,
+    "SMTPConfig_DefUserAccountSender": null,
+    "SMTPConfig_DefDomainAccountSender": null,
+    "SMTPConfig_EnabledSSL": false,
+    "SMTPConfig_DefCredentials": false,
+    "IDP_StoreURLBase": "http://WSBack.ws.local/Workspace",
+    "IDP_LoginUrl": "http://WSBack.ws.local/Workspace/LoginIdp/SSO",
+    "IDP_LogoutUrl": "http://WSBack.ws.local/Workspace/SSOLogoutIdp",
+    "IDP_Certificate": "~/ExtCertificates/servman.idp.cer ",
+    "IDP_UseUPN": false,
+    "RootCred_RootUserDN": null,
+    "RootCred_RootGroupDN": null,
+    "AddConfig_QEUrl": null,
+    "AddConfig_NotifServUrl": null,
+    "AddConfig_EncryptConfig": true,
+    "AddConfig_RabbitScaleOutEnabled": false,
+    "AddConfig_EnableOfferPurchMode": true,
+    "AddConfig_CatalogByDevice": false,
+    "AddConfig_DelUsersFromAD": false,
+    "SCH_REST_PublicHost": "*",
+    "SCH_REST_PublicPort": "5000",
+    "CS_FilterByUA": null,
+    "Error": null,
+    "WorkspaceDBAdminUser": "WSAdmin",
+    "WorkspaceDBAdminPassword": null,
+    "WorkspaceDBUser": "WSUser",
+    "WorkspaceDBPassword": null,
+    "WorkspaceDBName": "Workspace",
+    "FarmName": "WorkspaceFarm",
+    "WebName": "workspace",
+    "ConsoleDBName": "WorkspaceConsole",
+    "ConsoleDBUser": "ConsoleUser",
+    "ConsoleDBPassword": null,
+    "StorefrontHtml5ClientVirtualDir": "HTML5Client",
+    "DefaultPublicUrl": "http://WSBack.ws.local/Workspace",
+    "WorkflowEngineHost": "WSBack.ws.local",
+    "RepositoryServer": "WSBack.ws.local"
+  },
+	"SelectedOptions": [{
+		"Key": "BUS Adapter",
+		"Value": true
+	},
+	{
+		"Key": "Instancing Database",
+		"Value": true
+	},
+	{
+		"Key": "Query Engine Controller",
+		"Value": false
+	},
+	{
+		"Key": "Query Engine Agent",
+		"Value": true
+	},
+	{
+		"Key": "Repository Database Creation",
+		"Value": true
+	},
+	{
+		"Key": "Repository Base",
+		"Value": true
+	},
+    {
+      "Key": "Repository API",
+      "Value": true
+    },
+	{
+		"Key": "Routing Engine Agent",
+		"Value": false
+	},
+	{
+		"Key": "Routing Engine Controller",
+		"Value": false
+	},
+	{
+		"Key": "Scheduler",
+		"Value": true
+	},
+	{
+		"Key": "Studio",
+		"Value": true
+	},
+	{
+		"Key": "Tracking Database",
+		"Value": false
+	},
+	{
+		"Key": "Workflow Analyzer",
+		"Value": false
+	},
+	{
+		"Key": "Workflow Analyzer Website",
+		"Value": false
+	},
+	{
+		"Key": "Workflow Engine Core",
+		"Value": true
+	},
+	{
+		"Key": "Activities",
+		"Value": true
+	},
+	{
+		"Key": "Database",
+		"Value": false
+	},
+	{
+		"Key": "Portal",
+		"Value": false
+	},
+	{
+		"Key": "ASG CloudRobot Encryption",
+		"Value": false
+	},
+	{
+		"Key": "Admin Console",
+		"Value": false
+	},
+	{
+		"Key": "Admin Console Database",
+		"Value": false
+	},
+	{
+		"Key": "Copy Storefront Files",
+		"Value": false
+	}]
+}
