Add deployment vsariables in json

--- a/AzureWorkspacesDeployment/Artifacts/wsfront/WSMISettings.json
+++ b/AzureWorkspacesDeployment/Artifacts/wsfront/WSMISettings.json
@@ -1,148 +1,148 @@
 {
-	"UserParams": {
-		"CertificateInstallationSuccessfull": false,
-		"RegisterWSLResultImageSuccessfull": false,
-		"SilentMode": false,
-		"UninstallMode": false,
-		"GenerateInputFileOnly": false,
-		"InstallerPath": "C:\\Install",
-		"InstallDir": "C:\\Program Files\\ASG Workspaces\\",
-		"InstallMode": [0],
-		"LicenseAccept": true,
-		"MongoServerHostName": "WSFront.ws.local",
-		"MongoConnectionString": "WSFront.ws.local:27017",
-		"MongoServerHostPort": "27017",
-		"MongoUserName": null,
-		"MongoPassword": null,
-		"MongoDatabaseName": null,
-		"MongoDBNewOrExistingChoice": 0,
-		"SQLServerHostName": "sql.ws.local",
-		"SQLServerUserName": "wsadmin",
-		"SQLServerPassword": "workspace2016!",
-		"SQLServerDatabaseName": null,
-		"SQLServerUserIntegratedAuthentication": 1,
-		"DBNewOrExistingChoice": 0,
-		"ADDomainControler": "DC-01.ws.local",
-		"DomainName": "DC=ws,DC=local",
-		"ADUserName": null,
-		"ADPassword": null,
-		"ADOrganizationEntity": null,
-		"ADDistinguishedName": "DC=ws,DC=local",
-		"ADPort": "389",
-		"ADSSL": false,
-		"RabbitMQHostName": "10.0.0.200",
-		"RabbitMQHostPort": "5672",
-		"RabbitMQUser": "portal",
-		"RabbitMQPassword": "workspace2017!",
-		"RabbitMQQueueName": "Workspace",
-		"CertificatesSource": 0,
-		"IdentityProviderType": 0,
-		"CockpitLoginUrl": null,
-		"CockpitLogoutUrl": null,
-		"CockpitPublCertIDP": null,
-		"CockpitURL": "http://WSFront.ws.local/AuthServices",
-		"CockpitAutoSSO": false,
-		"ServiceProviderCertificateThumbprint": "",
-		"ServiceProviderCertificate": null,
-		"IdentityProviderCertificateThumbprint": "",
-		"QE_WCF_PublicPort": "8081",
-		"QE_WCF_PublicHost": "WSFront.ws.local",
-		"QE_REST_PublicHost": "*",
-		"QE_REST_PublicPort": "8880",
-		"QE_REST_PublicUrl": "WSFront.ws.local:8880",
-		"QE_HTTP_HostListen": "WSFront.ws.local",
-		"QE_WCF_HostListen": "WSFront.ws.local",
-		"QEAgentPort": "8082",
-		"QEAgentHost": "WSFront.ws.local",
-		"QEAgentSecurCertFindValue": null,
-		"QEAgentSecurContrSubjectName": null,
-		"QEAgentSecurUseSecurity": false,
-		"QEAgentSecurUseUnsafe": false,
-		"REC_PublicPort": "8090",
-		"REC_PublicHost": "WSFront.ws.local",
-		"REA_CloudRobotInstanceId": "CloudRobot-001",
-		"REA_ControllerServerHost": null,
-		"REA_ControllerServerPort": "8090",
-		"BA_BusServer": "WSFront.ws.local",
-		"BA_TargetInstanceId": "CloudRobot-001",
-		"BA_RemoteControlBaseAddr": "http://*:9100",
-		"IDB_DatabaseName": "CloudRobotWorkflowInstanceStore",
-		"IDB_InstanceStoreUser": "CloudRobotInstanceStoreAdmin",
-		"IDB_InstanceStoreUserPassword": null,
-		"InstancingDatabaseMode": 0,
-		"SCH_ServiceAddress": "WSFront.ws.local",
-		"SCH_DBName": "AsgScheduler",
-		"SCH_DBUserName": "SchedulerAdmin",
-		"SCH_DBUserPassword": null,
-		"SCH_DatabaseMode": 0,
-		"WE_Server": "WSFront.ws.local",
-		"ApprovalServer": "WSFront.ws.local",
-		"SchedulerServer": "WSFront.ws.local",
-		"WE_User": null,
-		"WE_UserPassword": null,
-		"WE_EnableInstancing": true,
-		"WE_UseLdapViaSsl": false,
-		"TD_DBServer": "WSFront.ws.local",
-		"TD_DataBase": "CloudRobotWorkflowTrackingStore",
-		"TD_DBUser": "CloudRobotTrackingStoreAdmin",
-		"TD_DBUserPassword": null,
-		"TD_TrackingMode": 0,
-		"TrackingDatabaseMode": 0,
-		"NotificationServer": "WSFront.ws.local",
-		"NotifyMailAddress": null,
-		"RepBaseProviderName": null,
-		"RepBaseEnterpriseMode": true,
-		"RepBaseSupportMailAddress": null,
-		"RepBaseEntryOU": null,
-		"RepBaseHomeDirShare": null,
-		"RepBaseHomeDriveLetter": "H:",
-		"RepBaseTsProfileShare": null,
-		"RepositoryDBName": "RepositoryDB",
-		"RepositoryDBUser": "Robot",
-		"RepositoryDBPassword": null,
-		"IISVD_WebSite": "Default Web Site",
-		"IISVD_VDir": "Workspace",
-		"SMTPConfig_Host": null,
-		"SMTPConfig_Port": null,
-		"SMTPConfig_UserName": null,
-		"SMTPConfig_Password": null,
-		"SMTPConfig_DefUserAccountSender": null,
-		"SMTPConfig_DefDomainAccountSender": null,
-		"SMTPConfig_EnabledSSL": false,
-		"SMTPConfig_DefCredentials": false,
-		"IDP_StoreURLBase": "http://WSFront.ws.local/Workspace",
-		"IDP_LoginUrl": "http://WSFront.ws.local/Workspace/LoginIdp/SSO",
-		"IDP_LogoutUrl": "http://WSFront.ws.local/Workspace/SSOLogoutIdp",
-		"IDP_Certificate": "~/ExtCertificates/servman.idp.cer ",
-		"IDP_UseUPN": false,
-		"RootCred_RootUserDN": "CN=wsadmin,CN=Users,DC=ws,DC=local",
-		"RootCred_RootGroupDN": null,
-		"AddConfig_QEUrl": null,
-		"AddConfig_NotifServUrl": null,
-		"AddConfig_EncryptConfig": false,
-		"AddConfig_RabbitScaleOutEnabled": false,
-		"AddConfig_EnableOfferPurchMode": true,
-		"AddConfig_CatalogByDevice": false,
-		"AddConfig_DelUsersFromAD": false,
-		"SCH_REST_PublicHost": "*",
-		"SCH_REST_PublicPort": "5000",
-		"CS_FilterByUA": null,
-		"Error": null,
-		"WorkspaceDBAdminUser": "WSAdminweb",
-		"WorkspaceDBAdminPassword": "workspace2016!",
-		"WorkspaceDBUser": "WSUser",
-		"WorkspaceDBPassword": "workspace2016!",
-		"WorkspaceDBName": "Workspace",
-		"FarmName": "WorkspaceFarm",
-		"WebName": "workspace",
-		"ConsoleDBName": "WorkspaceConsole",
-		"ConsoleDBUser": "ConsoleUser",
-		"ConsoleDBPassword": "workspace2016!",
-		"StorefrontHtml5ClientVirtualDir": "HTML5Client",
-		"DefaultPublicUrl": "http://WSFront.ws.local/Workspace",
-		"WorkflowEngineHost": "WSFront.ws.local",
-		"RepositoryServer": "WSFront.ws.local"
-	},
+  "UserParams": {
+    "CertificateInstallationSuccessfull": false,
+    "RegisterWSLResultImageSuccessfull": false,
+    "SilentMode": false,
+    "UninstallMode": false,
+    "GenerateInputFileOnly": false,
+    "InstallerPath": "C:\\Install",
+    "InstallDir": "C:\\Program Files\\ASG Workspaces\\",
+    "InstallMode": [ 0 ],
+    "LicenseAccept": true,
+    "MongoServerHostName": "WSFront.ws.local",
+    "MongoConnectionString": "WSFront.ws.local:27017",
+    "MongoServerHostPort": "27017",
+    "MongoUserName": null,
+    "MongoPassword": null,
+    "MongoDatabaseName": null,
+    "MongoDBNewOrExistingChoice": 0,
+    "SQLServerHostName": "sql.ws.local",
+    "SQLServerUserName": "%user%",
+    "SQLServerPassword": "%password%",
+    "SQLServerDatabaseName": null,
+    "SQLServerUserIntegratedAuthentication": 1,
+    "DBNewOrExistingChoice": 0,
+    "ADDomainControler": "DC-01.ws.local",
+    "DomainName": "DC=ws,DC=local",
+    "ADUserName": null,
+    "ADPassword": null,
+    "ADOrganizationEntity": null,
+    "ADDistinguishedName": "DC=ws,DC=local",
+    "ADPort": "389",
+    "ADSSL": false,
+    "RabbitMQHostName": "10.0.0.200",
+    "RabbitMQHostPort": "5672",
+    "RabbitMQUser": "portal",
+    "RabbitMQPassword": "workspace2017!",
+    "RabbitMQQueueName": "Workspace",
+    "CertificatesSource": 0,
+    "IdentityProviderType": 0,
+    "CockpitLoginUrl": null,
+    "CockpitLogoutUrl": null,
+    "CockpitPublCertIDP": null,
+    "CockpitURL": "http://WSFront.ws.local/AuthServices",
+    "CockpitAutoSSO": false,
+    "ServiceProviderCertificateThumbprint": "",
+    "ServiceProviderCertificate": null,
+    "IdentityProviderCertificateThumbprint": "",
+    "QE_WCF_PublicPort": "8081",
+    "QE_WCF_PublicHost": "WSFront.ws.local",
+    "QE_REST_PublicHost": "*",
+    "QE_REST_PublicPort": "8880",
+    "QE_REST_PublicUrl": "WSFront.ws.local:8880",
+    "QE_HTTP_HostListen": "WSFront.ws.local",
+    "QE_WCF_HostListen": "WSFront.ws.local",
+    "QEAgentPort": "8082",
+    "QEAgentHost": "WSFront.ws.local",
+    "QEAgentSecurCertFindValue": null,
+    "QEAgentSecurContrSubjectName": null,
+    "QEAgentSecurUseSecurity": false,
+    "QEAgentSecurUseUnsafe": false,
+    "REC_PublicPort": "8090",
+    "REC_PublicHost": "WSFront.ws.local",
+    "REA_CloudRobotInstanceId": "CloudRobot-001",
+    "REA_ControllerServerHost": null,
+    "REA_ControllerServerPort": "8090",
+    "BA_BusServer": "WSFront.ws.local",
+    "BA_TargetInstanceId": "CloudRobot-001",
+    "BA_RemoteControlBaseAddr": "http://*:9100",
+    "IDB_DatabaseName": "CloudRobotWorkflowInstanceStore",
+    "IDB_InstanceStoreUser": "CloudRobotInstanceStoreAdmin",
+    "IDB_InstanceStoreUserPassword": null,
+    "InstancingDatabaseMode": 0,
+    "SCH_ServiceAddress": "WSFront.ws.local",
+    "SCH_DBName": "AsgScheduler",
+    "SCH_DBUserName": "SchedulerAdmin",
+    "SCH_DBUserPassword": null,
+    "SCH_DatabaseMode": 0,
+    "WE_Server": "WSFront.ws.local",
+    "ApprovalServer": "WSFront.ws.local",
+    "SchedulerServer": "WSFront.ws.local",
+    "WE_User": null,
+    "WE_UserPassword": null,
+    "WE_EnableInstancing": true,
+    "WE_UseLdapViaSsl": false,
+    "TD_DBServer": "WSFront.ws.local",
+    "TD_DataBase": "CloudRobotWorkflowTrackingStore",
+    "TD_DBUser": "CloudRobotTrackingStoreAdmin",
+    "TD_DBUserPassword": null,
+    "TD_TrackingMode": 0,
+    "TrackingDatabaseMode": 0,
+    "NotificationServer": "WSFront.ws.local",
+    "NotifyMailAddress": null,
+    "RepBaseProviderName": null,
+    "RepBaseEnterpriseMode": true,
+    "RepBaseSupportMailAddress": null,
+    "RepBaseEntryOU": null,
+    "RepBaseHomeDirShare": null,
+    "RepBaseHomeDriveLetter": "H:",
+    "RepBaseTsProfileShare": null,
+    "RepositoryDBName": "RepositoryDB",
+    "RepositoryDBUser": "Robot",
+    "RepositoryDBPassword": null,
+    "IISVD_WebSite": "Default Web Site",
+    "IISVD_VDir": "Workspace",
+    "SMTPConfig_Host": null,
+    "SMTPConfig_Port": null,
+    "SMTPConfig_UserName": null,
+    "SMTPConfig_Password": null,
+    "SMTPConfig_DefUserAccountSender": null,
+    "SMTPConfig_DefDomainAccountSender": null,
+    "SMTPConfig_EnabledSSL": false,
+    "SMTPConfig_DefCredentials": false,
+    "IDP_StoreURLBase": "http://WSFront.ws.local/Workspace",
+    "IDP_LoginUrl": "http://WSFront.ws.local/Workspace/LoginIdp/SSO",
+    "IDP_LogoutUrl": "http://WSFront.ws.local/Workspace/SSOLogoutIdp",
+    "IDP_Certificate": "~/ExtCertificates/servman.idp.cer ",
+    "IDP_UseUPN": false,
+    "RootCred_RootUserDN": "CN=%user%,CN=Users,DC=ws,DC=local",
+    "RootCred_RootGroupDN": null,
+    "AddConfig_QEUrl": null,
+    "AddConfig_NotifServUrl": null,
+    "AddConfig_EncryptConfig": false,
+    "AddConfig_RabbitScaleOutEnabled": false,
+    "AddConfig_EnableOfferPurchMode": true,
+    "AddConfig_CatalogByDevice": false,
+    "AddConfig_DelUsersFromAD": false,
+    "SCH_REST_PublicHost": "*",
+    "SCH_REST_PublicPort": "5000",
+    "CS_FilterByUA": null,
+    "Error": null,
+    "WorkspaceDBAdminUser": "WSAdminweb",
+    "WorkspaceDBAdminPassword": "%password%",
+    "WorkspaceDBUser": "WSUser",
+    "WorkspaceDBPassword": "%password%",
+    "WorkspaceDBName": "Workspace",
+    "FarmName": "WorkspaceFarm",
+    "WebName": "workspace",
+    "ConsoleDBName": "WorkspaceConsole",
+    "ConsoleDBUser": "ConsoleUser",
+    "ConsoleDBPassword": "%password%",
+    "StorefrontHtml5ClientVirtualDir": "HTML5Client",
+    "DefaultPublicUrl": "http://WSFront.ws.local/Workspace",
+    "WorkflowEngineHost": "WSFront.ws.local",
+    "RepositoryServer": "WSFront.ws.local"
+  },
 	"SelectedOptions": [{
 		"Key": "BUS Adapter",
 		"Value": false
