--- a/AzureWorkspacesDeployment/Artifacts/wsback/WSMISettings.json
+++ b/AzureWorkspacesDeployment/Artifacts/wsback/WSMISettings.json
@@ -17,15 +17,15 @@
     "MongoDatabaseName": null,
     "MongoDBNewOrExistingChoice": 0,
     "SQLServerHostName": "sql.ws.local",
-    "SQLServerUserName": "wsadmin",
-    "SQLServerPassword": "workspace2016!",
+    "SQLServerUserName": "%user%",
+    "SQLServerPassword": "%password%",
     "SQLServerDatabaseName": null,
     "SQLServerUserIntegratedAuthentication": 1,
     "DBNewOrExistingChoice": 0,
     "ADDomainControler": "DC-01.ws.local",
     "DomainName": "DC=ws,DC=local",
-    "ADUserName": "wsadmin",
-    "ADPassword": "workspace2016!",
+    "ADUserName": "%user%",
+    "ADPassword": "%password%",
     "ADOrganizationEntity": null,
     "ADDistinguishedName": "DC=ws,DC=local",
     "ADPort": "389",
@@ -68,12 +68,12 @@
     "BA_RemoteControlBaseAddr": "http://*:9100",
     "IDB_DatabaseName": "CloudRobotWorkflowInstanceStore",
     "IDB_InstanceStoreUser": "CloudRobotInstanceStoreAdmin",
-    "IDB_InstanceStoreUserPassword": "workspace2016!",
+    "IDB_InstanceStoreUserPassword": "%password%",
     "InstancingDatabaseMode": 0,
     "SCH_ServiceAddress": "WSBack.ws.local",
     "SCH_DBName": "AsgScheduler",
     "SCH_DBUserName": "SchedulerAdmin",
-    "SCH_DBUserPassword": "workspace2016!",
+    "SCH_DBUserPassword": "%password%",
     "SCH_DatabaseMode": 0,
     "WE_Server": "WSBack.ws.local",
     "ApprovalServer": "WSBack.ws.local",
@@ -99,7 +99,7 @@
     "RepBaseTsProfileShare": null,
     "RepositoryDBName": "RepositoryDB",
     "RepositoryDBUser": "Robot",
-    "RepositoryDBPassword": "workspace2016!",
+    "RepositoryDBPassword": "%password%",
     "IISVD_WebSite": "Default Web Site",
     "IISVD_VDir": "Workspace",
     "SMTPConfig_Host": null,
@@ -128,7 +128,7 @@
     "SCH_REST_PublicPort": "5000",
     "CS_FilterByUA": null,
     "Error": null,
-    "WorkspaceDBAdminUser": "WSAdmin",
+    "WorkspaceDBAdminUser": "WSAdminweb",
     "WorkspaceDBAdminPassword": null,
     "WorkspaceDBUser": "WSUser",
     "WorkspaceDBPassword": null,
