--- a/AzureWorkspacesDeployment/Artifacts/wsback/WSMISettings.json
+++ b/AzureWorkspacesDeployment/Artifacts/wsback/WSMISettings.json
@@ -68,12 +68,12 @@
     "BA_RemoteControlBaseAddr": "http://*:9100",
     "IDB_DatabaseName": "CloudRobotWorkflowInstanceStore",
     "IDB_InstanceStoreUser": "CloudRobotInstanceStoreAdmin",
-    "IDB_InstanceStoreUserPassword": "%password%",
+    "IDB_InstanceStoreUserPassword": "workspace2017!",
     "InstancingDatabaseMode": 0,
     "SCH_ServiceAddress": "WSBack.ws.local",
     "SCH_DBName": "AsgScheduler",
     "SCH_DBUserName": "SchedulerAdmin",
-    "SCH_DBUserPassword": "%password%",
+    "SCH_DBUserPassword": "workspace2017!",
     "SCH_DatabaseMode": 0,
     "WE_Server": "WSBack.ws.local",
     "ApprovalServer": "WSBack.ws.local",
@@ -99,7 +99,7 @@
     "RepBaseTsProfileShare": null,
     "RepositoryDBName": "RepositoryDB",
     "RepositoryDBUser": "Robot",
-    "RepositoryDBPassword": "%password%",
+    "RepositoryDBPassword": "workspace2017!",
     "IISVD_WebSite": "Default Web Site",
     "IISVD_VDir": "Workspace",
     "SMTPConfig_Host": null,
