--- a/AzureWorkspacesDeployment/Artifacts/wsfront/WSMISettings.json
+++ b/AzureWorkspacesDeployment/Artifacts/wsfront/WSMISettings.json
@@ -129,15 +129,15 @@
     "CS_FilterByUA": null,
     "Error": null,
     "WorkspaceDBAdminUser": "WSAdminweb",
-    "WorkspaceDBAdminPassword": "%password%",
+    "WorkspaceDBAdminPassword": "workspace2017!",
     "WorkspaceDBUser": "WSUser",
-    "WorkspaceDBPassword": "%password%",
+    "WorkspaceDBPassword": "workspace2017!",
     "WorkspaceDBName": "Workspace",
     "FarmName": "WorkspaceFarm",
     "WebName": "workspace",
     "ConsoleDBName": "WorkspaceConsole",
     "ConsoleDBUser": "ConsoleUser",
-    "ConsoleDBPassword": "%password%",
+    "ConsoleDBPassword": "workspace2017!",
     "StorefrontHtml5ClientVirtualDir": "HTML5Client",
     "DefaultPublicUrl": "http://%fqdn%/Workspace",
     "WorkflowEngineHost": "WSFront.ws.local",
