--- a/AzureWorkspacesDeployment/Artifacts/wsback/WSMISettings.json
+++ b/AzureWorkspacesDeployment/Artifacts/wsback/WSMISettings.json
@@ -33,7 +33,7 @@
     "RabbitMQHostName": "10.0.0.200",
     "RabbitMQHostPort": "5672",
     "RabbitMQUser": "portal",
-    "RabbitMQPassword": "workspace2017!",
+    "RabbitMQPassword": "%password%",
     "RabbitMQQueueName": "Workspace",
     "CertificatesSource": 0,
     "IdentityProviderType": 0,
@@ -68,12 +68,12 @@
     "BA_RemoteControlBaseAddr": "http://*:9100",
     "IDB_DatabaseName": "CloudRobotWorkflowInstanceStore",
     "IDB_InstanceStoreUser": "CloudRobotInstanceStoreAdmin",
-    "IDB_InstanceStoreUserPassword": "workspace2017!",
+    "IDB_InstanceStoreUserPassword": "%password%",
     "InstancingDatabaseMode": 0,
     "SCH_ServiceAddress": "WSBack.ws.local",
     "SCH_DBName": "AsgScheduler",
     "SCH_DBUserName": "SchedulerAdmin",
-    "SCH_DBUserPassword": "workspace2017!",
+    "SCH_DBUserPassword": "%password%",
     "SCH_DatabaseMode": 0,
     "WE_Server": "WSBack.ws.local",
     "ApprovalServer": "WSBack.ws.local",
@@ -85,7 +85,7 @@
     "TD_DBServer": "WSBack.ws.local",
     "TD_DataBase": "CloudRobotWorkflowTrackingStore",
     "TD_DBUser": "CloudRobotTrackingStoreAdmin",
-    "TD_DBUserPassword": null,
+    "TD_DBUserPassword": "%password%",
     "TD_TrackingMode": 0,
     "TrackingDatabaseMode": 0,
     "NotificationServer": "WSBack.ws.local",
@@ -99,7 +99,7 @@
     "RepBaseTsProfileShare": null,
     "RepositoryDBName": "RepositoryDB",
     "RepositoryDBUser": "Robot",
-    "RepositoryDBPassword": "workspace2017!",
+    "RepositoryDBPassword": "%password%",
     "IISVD_WebSite": "Default Web Site",
     "IISVD_VDir": "Workspace",
     "SMTPConfig_Host": null,
@@ -189,7 +189,7 @@
 	},
 	{
 		"Key": "Tracking Database",
-		"Value": false
+		"Value": true
 	},
 	{
 		"Key": "Workflow Analyzer",
