WS deploy with DSC and domain user

--- a/AzureWorkspacesDeployment/Artifacts/wsback/WSMISettings.json
+++ b/AzureWorkspacesDeployment/Artifacts/wsback/WSMISettings.json
@@ -92,11 +92,11 @@
     "NotifyMailAddress": null,
     "RepBaseProviderName": null,
     "RepBaseEnterpriseMode": true,
-    "RepBaseSupportMailAddress": null,
+    "RepBaseSupportMailAddress": "noreply@ws.local",
     "RepBaseEntryOU": null,
-    "RepBaseHomeDirShare": null,
+    "RepBaseHomeDirShare": "\\\\WSBack.ws.local\\RobotHome",
     "RepBaseHomeDriveLetter": "C:\\",
-    "RepBaseTsProfileShare": null,
+    "RepBaseTsProfileShare": "\\\\WSBack.ws.local\\RobotTS",
     "RepositoryDBName": "RepositoryDB",
     "RepositoryDBUser": "Robot",
     "RepositoryDBPassword": "%password%",
