--- a/AzureWorkspacesDeployment/Artifacts/wsfront/WSMISettings.json
+++ b/AzureWorkspacesDeployment/Artifacts/wsfront/WSMISettings.json
@@ -110,9 +110,9 @@
     "SMTPConfig_DefDomainAccountSender": null,
     "SMTPConfig_EnabledSSL": false,
     "SMTPConfig_DefCredentials": false,
-    "IDP_StoreURLBase": "http://%fqdn%/Workspace",
-    "IDP_LoginUrl": "http://%fqdn%/Workspace/LoginIdp/SSO",
-    "IDP_LogoutUrl": "http://%fqdn%/Workspace/SSOLogoutIdp",
+    "IDP_StoreURLBase": "http://%IdpUrl%/Workspace",
+    "IDP_LoginUrl": "http://%IdpUrl%/Workspace/LoginIdp/SSO",
+    "IDP_LogoutUrl": "http://%IdpUrl%/Workspace/SSOLogoutIdp",
     "IDP_Certificate": "~/ExtCertificates/servman.idp.cer ",
     "IDP_UseUPN": false,
     "RootCred_RootUserDN": "CN=%user%,CN=Users,DC=ws,DC=local",
@@ -139,7 +139,7 @@
     "ConsoleDBUser": "ConsoleUser",
     "ConsoleDBPassword": "workspace2017!",
     "StorefrontHtml5ClientVirtualDir": "HTML5Client",
-    "DefaultPublicUrl": "http://%fqdn%/Workspace",
+    "DefaultPublicUrl": "http://%IdpUrl%/Workspace",
     "WorkflowEngineHost": "%hostname%.ws.local",
     "RepositoryServer": "%hostname%.ws.local"
   },
